[package]
name = "airlock-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
argon2 = "0.5"               # key derivation
aes-gcm = "0.10"             # encryption (AES-GCM)
rand = "0.8"                 # generate nonce and salt
secrecy = "0.8"              # store secrets safely
base64 = "0.22"              # encode ciphertext + nonce for storage